# S21_SmartCalc

S21_SmartCalc/: Makefile  polish_tests.c  s21_additional_fanctions.c  s21_calc.h  s21_calculation_proc.c  s21_credit_calc.c  s21_polish_notation.c  s21_string_parser.c  s21_string_validation.c
S21_SmartCalc/S21SmartCalc/: CMakeLists.txt  graf.cpp  graf.h  graf.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  s21_creditcalc.cpp  s21_creditcalc.h  s21_creditcalc.ui
